Fix the issue when the cpu.max file is empty
And add a better error message for any other usage of `readSingleLine()`